@startuml

title __CLIENT's Class Diagram__\n

  namespace client {
    class client.Client {
        {static} ~ HELP : String
        {static} ~ WRONG_PARAMETERS : String
        {static} ~ WRONG_PARAMETERS_USE : String
        {static} + main()
    }
  }
  

  namespace client {
    class client.Game {
        - comeback : String
        - contained : boolean
        - insult : String
        - newGame : boolean
        - opcode : int
        - opponentComeback : String
        - opponentInsult : String
        + Game()
        + automaticMode()
        + manualMode()
        - writeErrorToStream()
    }
  }
  

  namespace client {
    class client.Menu {
        ~ scan : Scanner
        + getExit()
        + getId()
        + getName()
        + getOption()
    }
  }
  

  client.Game .up.|> shared.functions.Functions
  client.Game o-- shared.model.Player : client
  client.Game o-right- shared.database.Database : database
  client.Game o-up- utils.Datagram : datagram
  client.Game o-- shared.model.DatabaseProvider : dp
  client.Game o-- client.Menu : menu
  client.Game o-- shared.model.Player : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
